[gd_scene load_steps=3 format=3 uid="uid://c20s7doqd05u6"]

[ext_resource type="Script" path="res://scripts/leaderboard/score_submission_scene.gd" id="1_al6sg"]
[ext_resource type="PackedScene" uid="uid://dnndqh8ekqagf" path="res://scenes/leaderboard_component.tscn" id="2_6x2k3"]

[node name="leaderboard_submission" type="Node2D"]
script = ExtResource("1_al6sg")

[node name="leaderboard_component" parent="." instance=ExtResource("2_6x2k3")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="submit_form" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="score_label" type="Label" parent="CanvasLayer/submit_form"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -106.0
offset_right = 44.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 2
text = "Your Time: "

[node name="name_entry" type="LineEdit" parent="CanvasLayer/submit_form"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = 34.0
offset_right = 169.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter your name"

[node name="submit_button" type="Button" parent="CanvasLayer/submit_form"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = 140.0
offset_right = 156.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
text = "Submit Score"

[node name="loading_page" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/loading_page"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Loading..."

[connection signal="pressed" from="CanvasLayer/submit_form/submit_button" to="." method="_on_submit_button_pressed"]
